# todolist-cicd

./: .bandit  .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_UPLOAD_GUIDE.md  LICENSE  Makefile  Procfile  README.md  docker-compose.yml  k8s-deployment.yaml  nginx.conf  pyproject.toml  pytest.ini  railway.json  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  frontend-tests.yml
backend/: settings.py  settings_production.py  settings_test.py
docs/: ci-cd.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
scripts/: deploy.sh  init.sh
todos/: models.py  tests.py  views.py
todos/migrations/: 0001_initial.py
todos/tests/: test_models.py  test_serializers.py  test_views.py
